# restaurant-rag-chatbot

./: .gitignore  app.py  demo.py  main.py  pdf_menu_translated.json  pyproject.toml  requirements.txt  upload_menu.py  upload_to_db.py  website_data.json
