[project]
name = "restaurant-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "firecrawl>=4.21.0",
    "firecrawl-py>=4.21.0",
    "langchain>=1.2.13",
    "langchain-cohere>=0.5.0",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "pinecone>=8.1.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
]
